--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:exported="false">
         </activity>
         <activity
+            android:name=".EnlargeImage"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".ArchiveActivity"
             android:exported="false">
         </activity>
